--- a/docsJS/前端笔记1.0.1
+++ b/docsJS/前端笔记1.0.1
@@ -60,3 +60,7 @@ npm install babel-plugin-transform-es2015-modules-commonjs
 然后在 babelrc中配置
 { "plugins": ["transform-es2015-modules-commonjs"] }
 即可解决
+
+
+css斜线 // https://blog.51cto.com/u_15309889/3172868?abTest=51cto
+ background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><line x1="0" y1="0" x2="100%" y2="100%" stroke="black" stroke-width="1"/></svg>');
