vue3组件中引入其他js文件

--- a/docsJS/前端笔记1.0.1
+++ b/docsJS/前端笔记1.0.1
@@ -64,3 +64,7 @@ npm install babel-plugin-transform-es2015-modules-commonjs
 
 css斜线 // https://blog.51cto.com/u_15309889/3172868?abTest=51cto
  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><line x1="0" y1="0" x2="100%" y2="100%" stroke="black" stroke-width="1"/></svg>');
+
+
+vue3组件中引入其他js文件，可放到public文件夹，直接'demo.js'引入，不需要加 ./
+
